word-wrap solved?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ p {
     text-align: center;
     width: 100%;
     height: 16px;
+    word-wrap: break-word;
     overflow-wrap: break-word;
 }
 
